--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   </head>
   <body>
     <h1>Cv Lucia</h1>
+    <h2>Estudios</h2>
+    <p>Actualmente, programación full stack</p>
   </body>
 </html>
