--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Cv Lucia</h1>
     <h2>Estudios</h2>
     <p>Actualmente, programación full stack</p>
+    <p>Diseño UX/UI</p>
   </body>
 </html>
