--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Mi primer proyecto de Git</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a>Home</a></li>
+        <li><a>Contacto</a></li>
+        <li><a>Portfolio</a></li>
+      </ul>
+    </nav>
     <h1>Cv Lucia</h1>
     <h2>Estudios</h2>
     <p>Actualmente, programación full stack</p>
