agregue titulo de bienvenida

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Mi primer proyecto de Git</title>
   </head>
   <body>
+    <h2>Bienvenidos!</h2>
     <h1>Cv Lucia</h1>
     <h2>Estudios</h2>
     <p>Actualmente, programación full stack</p>
