--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </ul>
     </nav>
     <h2>Bienvenidos!</h2>
-    <h1>Cv Lucia</h1>
+    <h1>Cv TUZZA, Lucia</h1>
     <h2>Estudios</h2>
     <p>Actualmente, programación full stack</p>
     <p>Diseño UX/UI</p>
